src/lib/RickLangParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import RickLangListener from './RickLangListener.js';
import RickLangVisitor from './RickLangVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class RickLangParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'as'", "'+='", "'-='", "'*='", "'/='", 
                            "'++'", "'--'", "'true'", "'false'", null, null, 
                            null, "'give'", "'up'", "'gonna'", "'then'", 
                            "'andifuaskmehowimfeeling'", "'wheneveryouneedsomebody'", 
                            "'whenigivemy'", "'itwillbecompletely'", "'togetherforeverwith'", 
                            "'thereaintnomistaking'", "'iftheyevergetudown'", 
                            "'weknowthe'", "'andwe'regonnaplayit'", "'desertu'", 
                            "'runaround'", "'ijustwannatelluhowimfeeling'", 
                            "'greaterthan'", "'lessthan'", "'greaterthanequalto'", 
                            "'lessthanequalto'", "'is'", "'aint'", "'and'", 
                            "'or'", "'not'", "'+'", "'-'", "'*'", "'/'", 
                            "'%'", "'^'", "'('", "')'", "'{'", "'}'", "'['", 
                            "']'", "','" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, "WS", "COMMENT", "INLINECOMMENT", 
                             "LET", "ASSIGN", "FUN", "THEN", "IF", "ELSE", 
                             "RETURNOP", "RETURNCL", "WHILE", "TRY", "CATCH", 
                             "IMPORTOP", "IMPORTCL", "BREAK", "CONTINUE", 
                             "PRINT", "GT", "LT", "GE", "LE", "EQ", "NE", 
                             "AND", "OR", "NOT", "PLUS", "MINUS", "MULT", 
                             "DIV", "MOD", "POW", "LPAREN", "RPAREN", "LBRACE", 
                             "RBRACE", "LBRACKET", "RBRACKET", "COMMA", 
                             "QUOTES", "ID", "NUMCONST", "STRINGCONST" ];
    static ruleNames = [ "program", "statement", "stmtList", "importStmt", 
                         "funStmt", "varStmt", "ifStmt", "whileStmt", "tryStmt", 
                         "catchStmt", "breakStmt", "continueStmt", "printStmt", 
                         "returnStmt", "exprStmt", "expr", "exprList", "simpleExpr", 
                         "andExpr", "unaryRelExpr", "relExpr", "addExpr", 
                         "multExpr", "powExpr", "unaryExpr", "unaryOp", 
                         "factor", "mutable", "immutable", "call", "constant" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = RickLangParser.ruleNames;
        this.literalNames = RickLangParser.literalNames;
        this.symbolicNames = RickLangParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 17:
    	    		return this.simpleExpr_sempred(localctx, predIndex);
    	case 18:
    	    		return this.andExpr_sempred(localctx, predIndex);
    	case 20:
    	    		return this.relExpr_sempred(localctx, predIndex);
    	case 21:
    	    		return this.addExpr_sempred(localctx, predIndex);
    	case 22:
    	    		return this.multExpr_sempred(localctx, predIndex);
    	case 23:
    	    		return this.powExpr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    simpleExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    andExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    relExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 5);
    		case 5:
    			return this.precpred(this._ctx, 4);
    		case 6:
    			return this.precpred(this._ctx, 3);
    		case 7:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    addExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 8:
    			return this.precpred(this._ctx, 3);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    multExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 10:
    			return this.precpred(this._ctx, 4);
    		case 11:
    			return this.precpred(this._ctx, 3);
    		case 12:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    powExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 13:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, RickLangParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 501916608) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & 229505) !== 0)) {
	            this.state = 62;
	            this.statement();
	            this.state = 67;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, RickLangParser.RULE_statement);
	    try {
	        this.state = 80;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 24:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 68;
	            this.importStmt();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 69;
	            this.funStmt();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 70;
	            this.ifStmt();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 71;
	            this.whileStmt();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 72;
	            this.tryStmt();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 73;
	            this.catchStmt();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 74;
	            this.breakStmt();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 75;
	            this.continueStmt();
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 76;
	            this.printStmt();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 77;
	            this.returnStmt();
	            break;
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 37:
	        case 44:
	        case 52:
	        case 53:
	        case 54:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 78;
	            this.exprStmt();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 79;
	            this.varStmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmtList() {
	    let localctx = new StmtListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, RickLangParser.RULE_stmtList);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 501916608) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & 229505) !== 0)) {
	            this.state = 82;
	            this.statement();
	            this.state = 87;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importStmt() {
	    let localctx = new ImportStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, RickLangParser.RULE_importStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(RickLangParser.IMPORTOP);
	        this.state = 89;
	        localctx.fName = this.match(RickLangParser.STRINGCONST);
	        this.state = 90;
	        this.match(RickLangParser.IMPORTCL);
	        this.state = 91;
	        this.match(RickLangParser.T__0);
	        this.state = 92;
	        localctx.fAlias = this.match(RickLangParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funStmt() {
	    let localctx = new FunStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, RickLangParser.RULE_funStmt);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(RickLangParser.FUN);
	        this.state = 95;
	        localctx.funName = this.match(RickLangParser.ID);
	        this.state = 96;
	        this.match(RickLangParser.LPAREN);
	        this.state = 98;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 960) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & 229505) !== 0)) {
	            this.state = 97;
	            localctx.funParams = this.exprList();
	        }

	        this.state = 100;
	        this.match(RickLangParser.RPAREN);
	        this.state = 101;
	        this.match(RickLangParser.LBRACE);
	        this.state = 102;
	        localctx.funBlock = this.stmtList();
	        this.state = 103;
	        this.match(RickLangParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varStmt() {
	    let localctx = new VarStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, RickLangParser.RULE_varStmt);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.match(RickLangParser.LET);
	        this.state = 106;
	        localctx.varName = this.match(RickLangParser.ID);
	        this.state = 109;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===14) {
	            this.state = 107;
	            this.match(RickLangParser.ASSIGN);
	            this.state = 108;
	            localctx.varVal = this.expr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStmt() {
	    let localctx = new IfStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, RickLangParser.RULE_ifStmt);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.match(RickLangParser.IF);
	        this.state = 112;
	        localctx.ifCondition = this.expr();
	        this.state = 113;
	        this.match(RickLangParser.THEN);
	        this.state = 114;
	        this.match(RickLangParser.LBRACE);
	        this.state = 115;
	        localctx.ifBlock = this.stmtList();
	        this.state = 116;
	        this.match(RickLangParser.RBRACE);
	        this.state = 122;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18) {
	            this.state = 117;
	            this.match(RickLangParser.ELSE);
	            this.state = 118;
	            this.match(RickLangParser.LBRACE);
	            this.state = 119;
	            localctx.elseBlock = this.stmtList();
	            this.state = 120;
	            this.match(RickLangParser.RBRACE);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whileStmt() {
	    let localctx = new WhileStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, RickLangParser.RULE_whileStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this.match(RickLangParser.WHILE);
	        this.state = 125;
	        localctx.whileCondition = this.expr();
	        this.state = 126;
	        this.match(RickLangParser.LBRACE);
	        this.state = 127;
	        localctx.whileBlock = this.stmtList();
	        this.state = 128;
	        this.match(RickLangParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tryStmt() {
	    let localctx = new TryStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, RickLangParser.RULE_tryStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(RickLangParser.TRY);
	        this.state = 131;
	        this.match(RickLangParser.LBRACE);
	        this.state = 132;
	        localctx.tryBlock = this.stmtList();
	        this.state = 133;
	        this.match(RickLangParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	catchStmt() {
	    let localctx = new CatchStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, RickLangParser.RULE_catchStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(RickLangParser.CATCH);
	        this.state = 136;
	        localctx.errName = this.match(RickLangParser.ID);
	        this.state = 137;
	        this.match(RickLangParser.LBRACE);
	        this.state = 138;
	        localctx.catchBlock = this.stmtList();
	        this.state = 139;
	        this.match(RickLangParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	breakStmt() {
	    let localctx = new BreakStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, RickLangParser.RULE_breakStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 141;
	        this.match(RickLangParser.BREAK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	continueStmt() {
	    let localctx = new ContinueStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, RickLangParser.RULE_continueStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 143;
	        this.match(RickLangParser.CONTINUE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	printStmt() {
	    let localctx = new PrintStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, RickLangParser.RULE_printStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        this.match(RickLangParser.PRINT);
	        this.state = 146;
	        localctx.printVal = this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	returnStmt() {
	    let localctx = new ReturnStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, RickLangParser.RULE_returnStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        this.match(RickLangParser.RETURNOP);
	        this.state = 149;
	        localctx.returnVal = this.expr();
	        this.state = 150;
	        this.match(RickLangParser.RETURNCL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exprStmt() {
	    let localctx = new ExprStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, RickLangParser.RULE_exprStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, RickLangParser.RULE_expr);
	    try {
	        this.state = 181;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 154;
	            localctx.left = this.mutable();
	            this.state = 155;
	            localctx.op = this.match(RickLangParser.ASSIGN);
	            this.state = 156;
	            localctx.right = this.expr();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 158;
	            localctx.left = this.mutable();
	            this.state = 159;
	            localctx.op = this.match(RickLangParser.T__1);
	            this.state = 160;
	            localctx.right = this.expr();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 162;
	            localctx.left = this.mutable();
	            this.state = 163;
	            localctx.op = this.match(RickLangParser.T__2);
	            this.state = 164;
	            localctx.right = this.expr();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 166;
	            localctx.left = this.mutable();
	            this.state = 167;
	            localctx.op = this.match(RickLangParser.T__3);
	            this.state = 168;
	            localctx.right = this.expr();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 170;
	            localctx.left = this.mutable();
	            this.state = 171;
	            localctx.op = this.match(RickLangParser.T__4);
	            this.state = 172;
	            localctx.right = this.expr();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 174;
	            localctx.left = this.mutable();
	            this.state = 175;
	            localctx.op = this.match(RickLangParser.T__5);
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 177;
	            localctx.left = this.mutable();
	            this.state = 178;
	            localctx.op = this.match(RickLangParser.T__6);
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 180;
	            this.simpleExpr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exprList() {
	    let localctx = new ExprListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, RickLangParser.RULE_exprList);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 183;
	        this.expr();
	        this.state = 188;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===50) {
	            this.state = 184;
	            this.match(RickLangParser.COMMA);
	            this.state = 185;
	            this.expr();
	            this.state = 190;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	simpleExpr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new SimpleExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 34;
	    this.enterRecursionRule(localctx, 34, RickLangParser.RULE_simpleExpr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        this.andExpr(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 199;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new SimpleExprContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, RickLangParser.RULE_simpleExpr);
	                this.state = 194;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 195;
	                this.match(RickLangParser.OR);
	                this.state = 196;
	                this.andExpr(0); 
	            }
	            this.state = 201;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	andExpr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new AndExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 36;
	    this.enterRecursionRule(localctx, 36, RickLangParser.RULE_andExpr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 203;
	        this.unaryRelExpr();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 210;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new AndExprContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, RickLangParser.RULE_andExpr);
	                this.state = 205;
	                if (!( this.precpred(this._ctx, 2))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                }
	                this.state = 206;
	                this.match(RickLangParser.AND);
	                this.state = 207;
	                this.unaryRelExpr(); 
	            }
	            this.state = 212;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	unaryRelExpr() {
	    let localctx = new UnaryRelExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, RickLangParser.RULE_unaryRelExpr);
	    try {
	        this.state = 216;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 213;
	            this.match(RickLangParser.NOT);
	            this.state = 214;
	            this.unaryExpr();
	            break;
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 44:
	        case 52:
	        case 53:
	        case 54:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 215;
	            this.relExpr(0);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	relExpr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new RelExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 40;
	    this.enterRecursionRule(localctx, 40, RickLangParser.RULE_relExpr, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 219;
	        this.addExpr(0);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 241;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 239;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new RelExprContext(this, _parentctx, _parentState);
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, RickLangParser.RULE_relExpr);
	                    this.state = 221;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 222;
	                    localctx.op = this.match(RickLangParser.GT);
	                    this.state = 223;
	                    localctx.right = this.addExpr(0);
	                    break;

	                case 2:
	                    localctx = new RelExprContext(this, _parentctx, _parentState);
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, RickLangParser.RULE_relExpr);
	                    this.state = 224;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 225;
	                    localctx.op = this.match(RickLangParser.LT);
	                    this.state = 226;
	                    localctx.right = this.addExpr(0);
	                    break;

	                case 3:
	                    localctx = new RelExprContext(this, _parentctx, _parentState);
	                    localctx.left = _prevctx;
	                    this.pushNewRecursionContext(localctx, _startState, RickLangParser.RULE_relExpr);
	                    this.state = 227;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 228;
	                    localctx.op = this.match(RickLangParser.GE);
	                    this.state = 229;
	                    localctx.right = this.addExpr(0);
	                    break;
